[package]
name = "remainder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# {
#     "rust-analyzer.server.extraEnv": [
#         "CARGO": "cargo",
#         # //如果是windows 系统可以在这里加"my-cargo.exe" or "cargo.exe"
#     ],
# }

[dependencies]
crossbeam-deque = "0.8"

# {
#     "rust-analyzer.linkedProjects":[
#         "H:\mycode\rust_learn\remainder\Cargo.toml"
#     ]
# }
